--- a/index.html
+++ b/index.html
@@ -8,13 +8,45 @@
 </head>
 
 <body>
-    
-    <h1>Hola, soy Bruno Díaz 👋</h1>
-    <h2>Founder | CEO | CPO</h2>
 
-    <img src="./foto_bruno_400x400.png" alt="Foto de Bruno">
+    <header>
+        Bruno Díaz | About Me
+    </header>
 
-    <p>Soy un Líder Técnico con 13 años de experiencia en la industria de software web, especializado en sectores como la banca, ecommerce y educación.</p>
+    <main>
+        <h1>Hola, soy Bruno Díaz 👋</h1>
+        <h2>Founder | CEO | CPO</h2>
+
+        <img src="./foto_bruno_400x400.png" alt="Foto de Bruno" width="200">
+
+        <p>Soy un <strong>Líder Técnico</strong> con 13 años de experiencia en la industria de software web,
+            especializado en sectores como la banca, ecommerce y educación.</p>
+
+        <hr>
+        <h3>Experiencia Profesional</h3>
+        <ul>
+            <li><strong>Industria Bancaria</strong>: Líder en la implementación de proyectos digitales.</li>
+            <li><strong>E-commerce</strong>: Desarrollo de soluciones escalables y seguras.</li>
+            <li><strong>Educación</strong>: Mentor y formador de nuevas generaciones de desarrolladores.</li>
+        </ul>
+        <h3>Habilidades</h3>
+        <ul>
+            <li>Desarrollo web (JavaScript, PHP, Python).</li>
+            <li>Gestión de equipos con metodologías ágiles (Scrum, Kanban).</li>
+            <li>Arquitectura de sistemas distribuidos ServerLess y Docker.</li>
+        </ul>
+    </main>
+
+    <footer>
+        <h3>Sígueme / Contáctame</h3>
+        <ul>
+            <li><a href="https://www.linkedin.com/in/brunodiazc/">Linkedin</a></li>
+            <li><a href="https://github.com/bdiazc90">GitHub</a></li>
+            <li><a href="mailto:bruno@enter.edu.pe">Correo</a></li>
+        </ul>
+
+    </footer>
 
 </body>
+
 </html>
