html v4 (CSS usando IA)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <h1>Hola, soy Bruno Díaz 👋</h1>
         <h2>Founder | CEO | CPO</h2>
 
-        <img src="./foto_bruno_400x400.png" alt="Foto de Bruno" width="200">
+        <div class="profile-picture">
+            <img src="./foto_bruno_400x400.png" alt="Foto de Bruno" width="200">
+        </div>
 
         <p>Soy un <strong>Líder Técnico</strong> con 13 años de experiencia en la industria de software web,
             especializado en sectores como la banca, ecommerce y educación.</p>
