--- a/index.html
+++ b/index.html
@@ -22,23 +22,29 @@
     </header>
 
     <main>
-        <h1>Hola, soy Bruno Díaz 👋</h1>
-        <h2>Founder | CEO | CPO</h2>
+        <section class="flex flex-col gap-4 md:gap-8">
+            <h1>Hola, soy Bruno Díaz 👋</h1>
+            <h2>Founder | CEO | CPO</h2>
 
-        <div class="profile-picture">
-            <img src="./foto_bruno_400x400.png" alt="Foto de Bruno" width="200">
-        </div>
+            <div class="profile-picture">
+                <img src="./foto_bruno_400x400.png" alt="Foto de Bruno" width="200">
+            </div>
 
-        <p>Soy un <strong>Líder Técnico</strong> con 13 años de experiencia en la industria de software web,
-            especializado en sectores como la banca, ecommerce y educación.</p>
+            <p>Soy un <strong>Líder Técnico</strong> con 13 años de experiencia en la industria de software web,
+                especializado en sectores como la banca, ecommerce y educación.</p>
+        </section>
+
 
         <hr>
-        <h3>Experiencia Profesional</h3>
-        <ul>
-            <li><strong>Industria Bancaria</strong>: Líder en la implementación de proyectos digitales.</li>
-            <li><strong>E-commerce</strong>: Desarrollo de soluciones escalables y seguras.</li>
-            <li><strong>Educación</strong>: Mentor y formador de nuevas generaciones de desarrolladores.</li>
-        </ul>
+
+        <section class="border-orange-500 rounded-lg p-6 md:p-12">
+            <h3>Experiencia Profesional</h3>
+            <ul>
+                <li><strong>Industria Bancaria</strong>: Líder en la implementación de proyectos digitales.</li>
+                <li><strong>E-commerce</strong>: Desarrollo de soluciones escalables y seguras.</li>
+                <li><strong>Educación</strong>: Mentor y formador de nuevas generaciones de desarrolladores.</li>
+            </ul>
+        </section>
         <h3>Habilidades</h3>
         <ul>
             <li>Desarrollo web (JavaScript, PHP, Python).</li>
