--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
         </section>
 
 
-        <hr>
-
-        <section class="border-orange-500 rounded-lg p-6 md:p-12">
+        <hr class="my-4">
+        <section class="border-2 border-orange-500 bg-gradient-to-t from-yellow-200 to-rose-300 rounded-lg p-6 md:p-12">
             <h3>Experiencia Profesional</h3>
             <ul>
                 <li><strong>Industria Bancaria</strong>: Líder en la implementación de proyectos digitales.</li>
@@ -45,6 +44,7 @@
                 <li><strong>Educación</strong>: Mentor y formador de nuevas generaciones de desarrolladores.</li>
             </ul>
         </section>
+
         <h3>Habilidades</h3>
         <ul>
             <li>Desarrollo web (JavaScript, PHP, Python).</li>
