--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+        <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./style.css">
-    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
@@ -34,7 +34,6 @@
                 especializado en sectores como la banca, ecommerce y educación.</p>
         </section>
 
-
         <hr class="my-4">
         <section class="border-2 border-orange-500 bg-gradient-to-t from-yellow-200 to-rose-300 rounded-lg p-6 md:p-12">
             <h3>Experiencia Profesional</h3>
@@ -45,12 +44,15 @@
             </ul>
         </section>
 
+        <section class="border-2 border-orange-500 bg-gradient-to-t from-yellow-200 to-rose-300 rounded-lg p-6 md:p-12">
+        </section>
         <h3>Habilidades</h3>
         <ul>
             <li>Desarrollo web (JavaScript, PHP, Python).</li>
             <li>Gestión de equipos con metodologías ágiles (Scrum, Kanban).</li>
             <li>Arquitectura de sistemas distribuidos ServerLess y Docker.</li>
         </ul>
+        </section>
     </main>
 
     <footer>
