--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-        <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -45,19 +45,18 @@
         </section>
 
         <section class="border-2 border-orange-500 bg-gradient-to-t from-yellow-200 to-rose-300 rounded-lg p-6 md:p-12">
-        </section>
-        <h3>Habilidades</h3>
-        <ul>
-            <li>Desarrollo web (JavaScript, PHP, Python).</li>
-            <li>Gestión de equipos con metodologías ágiles (Scrum, Kanban).</li>
-            <li>Arquitectura de sistemas distribuidos ServerLess y Docker.</li>
-        </ul>
+            <h3>Habilidades</h3>
+            <ul>
+                <li>Desarrollo web (JavaScript, PHP, Python).</li>
+                <li>Gestión de equipos con metodologías ágiles (Scrum, Kanban).</li>
+                <li>Arquitectura de sistemas distribuidos ServerLess y Docker.</li>
+            </ul>
         </section>
     </main>
 
     <footer>
-        <h3>Sígueme / Contáctame</h3>
-        <ul>
+        <h3 class="underline">Sígueme / Contáctame</h3>
+        <ul class="flex justify-center gap-4">
             <li><a href="https://www.linkedin.com/in/brunodiazc/">Linkedin</a></li>
             <li><a href="https://github.com/bdiazc90">GitHub</a></li>
             <li><a href="mailto:bruno@enter.edu.pe">Correo</a></li>
