--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
 
         <hr class="my-4">
-        <section class="border-2 border-orange-500 bg-gradient-to-t from-yellow-200 to-rose-300 rounded-lg p-6 md:p-12">
+        <section class="my-4 md:my-8 border-2 border-orange-500 bg-gradient-to-t from-yellow-200 to-rose-300 rounded-lg p-6 md:p-12">
             <h3>Experiencia Profesional</h3>
             <ul>
                 <li><strong>Industria Bancaria</strong>: Líder en la implementación de proyectos digitales.</li>
@@ -44,7 +44,7 @@
             </ul>
         </section>
 
-        <section class="border-2 border-orange-500 bg-gradient-to-t from-yellow-200 to-rose-300 rounded-lg p-6 md:p-12">
+        <section class="my-4 md:my-8 border-2 border-orange-500 bg-gradient-to-t from-yellow-200 to-rose-300 rounded-lg p-6 md:p-12">
             <h3>Habilidades</h3>
             <ul>
                 <li>Desarrollo web (JavaScript, PHP, Python).</li>
@@ -55,13 +55,12 @@
     </main>
 
     <footer>
-        <h3 class="underline">Sígueme / Contáctame</h3>
+        <h3 class="text-xl mb-4">Sígueme / Contáctame</h3>
         <ul class="flex justify-center gap-4">
-            <li><a href="https://www.linkedin.com/in/brunodiazc/">Linkedin</a></li>
-            <li><a href="https://github.com/bdiazc90">GitHub</a></li>
-            <li><a href="mailto:bruno@enter.edu.pe">Correo</a></li>
+            <li><a class="hover:underline hover:font-bold" href="https://www.linkedin.com/in/brunodiazc/">Linkedin</a></li>
+            <li><a class="hover:underline hover:font-bold" href="https://github.com/bdiazc90">GitHub</a></li>
+            <li><a class="hover:underline hover:font-bold" href="mailto:bruno@enter.edu.pe">Correo</a></li>
         </ul>
-
     </footer>
 
 </body>
